--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@aws-sdk/client-polly": "^3.917.0",
     "@google/generative-ai": "^0.24.1",
+    "@next/font": "^14.2.15",
     "@pinecone-database/pinecone": "^6.1.2",
     "@prisma/client": "^6.17.0",
     "@prisma/extension-accelerate": "^2.0.2",
