--- a/package.json
+++ b/package.json
@@ -3,17 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
+    "dev": "next dev",
+    "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "next lint",
+    "lint:fix": "next lint --fix"
   },
   "dependencies": {
     "@aws-sdk/client-polly": "^3.917.0",
     "@google/generative-ai": "^0.24.1",
     "@next/font": "^14.2.15",
     "@pinecone-database/pinecone": "^6.1.2",
-    "@prisma/client": "^6.17.0",
+    "@prisma/client": "^6.18.0",
     "@prisma/extension-accelerate": "^2.0.2",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.3",
@@ -28,10 +29,10 @@
     "formidable": "^3.5.4",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.545.0",
-    "next": "15.5.4",
-    "pdf-parse": "^2.2.2",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "next": "^15.5.4",
+    "pdf-parse": "2.2.2",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-hot-toast": "^2.6.0",
     "recordrtc": "^5.6.2",
     "tailwind-merge": "^3.3.1",
@@ -50,7 +51,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
     "postcss": "^8.5.6",
-    "prisma": "^6.17.0",
+    "prisma": "^6.18.0",
     "tailwindcss": "^4.1.14",
     "tsx": "^4.20.6",
     "tw-animate-css": "^1.4.0",
