--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "@tanstack/react-query": "^5.90.2",
     "assemblyai": "^4.18.4",
     "axios": "^1.12.2",
+    "bullmq": "^5.66.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
     "formidable": "^3.5.4",
     "framer-motion": "^12.23.24",
+    "ioredis": "^5.8.2",
     "lucide-react": "^0.545.0",
     "next": "^15.5.4",
     "pdf-parse": "2.2.2",
