--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@aws-sdk/client-polly": "^3.917.0",
     "@google/generative-ai": "^0.24.1",
+    "@mediapipe/camera_utils": "^0.3.1675466862",
+    "@mediapipe/face_detection": "^0.4.1646425229",
     "@next/font": "^14.2.15",
     "@pinecone-database/pinecone": "^6.1.2",
     "@prisma/client": "^6.18.0",
