--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@google/generative-ai": "^0.24.1",
     "@mediapipe/camera_utils": "^0.3.1675466862",
     "@mediapipe/face_detection": "^0.4.1646425229",
+    "@monaco-editor/react": "^4.7.0",
     "@next/font": "^14.2.15",
     "@pinecone-database/pinecone": "^6.1.2",
     "@prisma/client": "^6.18.0",
@@ -33,6 +34,7 @@
     "framer-motion": "^12.23.24",
     "ioredis": "^5.8.2",
     "lucide-react": "^0.545.0",
+    "monaco-editor": "^0.55.1",
     "next": "^15.5.4",
     "pdf-parse": "2.2.2",
     "react": "^19.1.0",
@@ -57,6 +59,7 @@
     "postcss": "^8.5.6",
     "prisma": "^6.18.0",
     "tailwindcss": "^4.1.14",
+    "ts-node": "^10.9.2",
     "tsx": "^4.20.6",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
