--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.6.0",
+    "react-resizable-panels": "^4.5.2",
     "recordrtc": "^5.6.2",
     "tailwind-merge": "^3.3.1",
     "uuid": "^13.0.0",
